--- a/index.html
+++ b/index.html
@@ -42,26 +42,51 @@
 
     <section class="mission">
       <div class="mission-content content">
-      <div class="text-section section">
-        <p class="title">The mission of our<br>organization</p>
-        <p class="description">The mission of the "Defense of Ukrainian Society" is focused on supporting the military and ensuring societal security, promoting their development, and mobilizing the public. Our organization works for the benefit of Ukraine, providing protection, solidarity, and security for the entire society.</p>
-      </div>
-      <div class="image-section hand-section section">
-        <img class="hand" src="/images/hand.png" alt="">
-      </div>
+        <div class="text-section section">
+          <p class="title">The mission of our<br>organization</p>
+          <p class="description">The mission of the "Defense of Ukrainian Society" is focused on supporting the military
+            and ensuring societal security, promoting their development, and mobilizing the public. Our organization
+            works for the benefit of Ukraine, providing protection, solidarity, and security for the entire society.</p>
+        </div>
+        <div class="image-section hand-section section">
+          <img class="hand" src="/images/hand.png" alt="">
+        </div>
       </div>
     </section>
 
     <section class="goals">
-<div class="goals-content content">
+      <div class="goals-content content">
         <div class="image-section section">
           <img src="/images/goals.png" alt="">
         </div>
         <div class="text-section section">
           <p class="title"> Goals and areas of the Civil<br>Society Organization</p>
-          <p class="description">The main goal of the Foundation's activities is to carry out charitable activities for the benefit of society by uniting the efforts of the public aimed at facilitating the practical implementation of national, regional, local, and international programs aimed at improving the socio-economic situation in Ukraine and enhancing the material well-being of the beneficiaries of charitable assistance.</p>
+          <p class="description">The main goal of the Foundation's activities is to carry out charitable activities for
+            the benefit of society by uniting the efforts of the public aimed at facilitating the practical
+            implementation of national, regional, local, and international programs aimed at improving the
+            socio-economic situation in Ukraine and enhancing the material well-being of the beneficiaries of charitable
+            assistance.</p>
         </div>
-</div>
+      </div>
+    </section>
+
+    <section class="president">
+      <div class="president-header">
+        <img src="/images/logo-small.png" alt="">
+        <p>Defense of<br>Ukrainian Society</p>
+      </div>
+      <div class="president-content content">
+        <div class="text-section section">
+          <p class="president-title title">⁣⁣President of the<br>civil society<br>organization</p>
+          <p class="description"> President of the civil society organization, Bogdan Stepanovych Zabredovsky, is the
+            leader of the organization and is responsible for defining strategic directions, decision-making, and
+            managing the activities of the organization. He plays a key role in the development and achievement of the
+            organization's goals.</p>
+        </div>
+        <div class="image-section section">
+          <img class="president" src="/images/president.jpg" alt="">
+        </div>
+      </div>
     </section>
 
   </main>
