added our work section

--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
     </section>
 
     <section class="president">
-      <div class="president-header">
+      <div class="president-header content">
         <img src="/images/logo-small.png" alt="">
         <p>Defense of<br>Ukrainian Society</p>
       </div>
@@ -89,6 +89,25 @@
       </div>
     </section>
 
+    <section class="our-work">
+      <div class="our-work-content content">
+        <p class="title">Cooperation with local<br>self-government bodies</p>
+        <div class="blocks-section">
+          <div class="block">
+            <img src="/images/coorpepation-1.jpg" alt="">
+          </div>
+          <div class="block">
+            <img src="/images/coorperation-2.jpg" alt="">
+          </div>
+          <div class="block">
+            <img src="/images/coorperation-2.jpg" alt="">
+          </div>
+        </div>
+        <a href="/">
+          <div class="button button-bold disable"><b>Learn more</b></div>
+        </a>
+      </div>
+    </section>
   </main>
   <script src="index.js"></script>
 </body>
