--- a/index.html
+++ b/index.html
@@ -103,6 +103,10 @@
             <img src="/images/coorperation-2.jpg" alt="">
           </div>
         </div>
+
+        <div class="text-container">
+          <p class="description"> Cooperation between civil society organizations (CSOs) and local self-government bodies (LSGBs) is an important factor for the development and improvement of society at the local level. It promotes the strengthening of democracy, the involvement of the public in the decision-making process, the enhancement of service quality, and the overall development of the region.</p>
+        </div>
         <a href="/">
           <div class="button button-bold disable"><b>Learn more</b></div>
         </a>
