added a couple of section

--- a/index.html
+++ b/index.html
@@ -91,27 +91,69 @@
 
     <section class="our-work">
       <div class="our-work-content content">
-        <p class="title">Cooperation with local<br>self-government bodies</p>
+        <p class="title">Our work</p>
         <div class="blocks-section">
-          <div class="block">
-            <img src="/images/coorpepation-1.jpg" alt="">
+          <div class="block work-block">
+            <img src="/images/our-work-1.jpg" alt="">
+            <p>AID FOR THE UKRAINIAN ARMED FORCES</p>
           </div>
-          <div class="block">
-            <img src="/images/coorperation-2.jpg" alt="">
+          <div class="block work-block">
+            <img src="/images/our-work-2.jpg" alt="">
+            <p>COLLABORATION WITH THE GOVERNMENT</p>
           </div>
-          <div class="block">
-            <img src="/images/coorperation-2.jpg" alt="">
+          <div class="block work-block">
+            <img src="/images/our-work-1.jpg" alt="">
+            <p>CHARITY AUCTION</p>
           </div>
         </div>
 
-        <div class="text-container">
-          <p class="description"> Cooperation between civil society organizations (CSOs) and local self-government bodies (LSGBs) is an important factor for the development and improvement of society at the local level. It promotes the strengthening of democracy, the involvement of the public in the decision-making process, the enhancement of service quality, and the overall development of the region.</p>
-        </div>
         <a href="/">
-          <div class="button button-bold disable"><b>Learn more</b></div>
+          <div class="button button-bold disable learn-button"><b>Learn more</b></div>
         </a>
       </div>
     </section>
+
+    <section class="mission">
+      <div class="mission-content coorp content">
+        <div class="text-section section">
+          <p class="title"> Cooperation with<br>military administrations</p>
+          <p class="description">Cooperation between civil society organizations and military administrations is an important aspect of societal development and ensuring the security and well-being of the population. It is based on interaction and partnership between these two sectors, aimed at achieving common goals. Collaboration contributes to improving mutual understanding, joint efforts, and the achievement of shared objectives, which include security, humanitarian assistance, human rights protection, infrastructure development, and much more.</p>
+          <a href="/">
+            <div class="button button-bold disable learn-button"><b>Learn more</b></div>
+          </a>
+        </div>
+        <div class="image-section hand-section section">
+          <img class="coorp-img" src="/images/coorperation-2.jpg" alt="">
+        </div>
+      </div>
+    </section>
+
+
+    <section class="coorperation">
+    <div class="coorperation-content content">
+      <p class="title">Cooperation with local<br>self-government bodies</p>
+      <div class="blocks-section">
+        <div class="block">
+          <img src="/images/coorpepation-1.jpg" alt="">
+        </div>
+        <div class="block">
+          <img src="/images/coorperation-2.jpg" alt="">
+        </div>
+        <div class="block">
+          <img src="/images/coorperation-2.jpg" alt="">
+        </div>
+      </div>
+
+      <div class="text-container">
+        <p class="description"> Cooperation between civil society organizations (CSOs) and local self-government bodies (LSGBs) is an important factor for the development and improvement of society at the local level. It promotes the strengthening of democracy, the involvement of the public in the decision-making process, the enhancement of service quality, and the overall development of the region.</p>
+      </div>
+
+      <a href="/">
+        <div class="button button-bold disable learn-button"><b>Learn more</b></div>
+      </a>
+    </div>
+  </section>
+
   </main>
   <script src="index.js"></script>
 </body>
