added bread section

--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
     <section class="mission">
       <div class="mission-content coorp content">
         <div class="text-section section">
-          <p class="title"> Cooperation with<br>military administrations</p>
+          <p class="title">Cooperation with<br>military administrations</p>
           <p class="description">Cooperation between civil society organizations and military administrations is an important aspect of societal development and ensuring the security and well-being of the population. It is based on interaction and partnership between these two sectors, aimed at achieving common goals. Collaboration contributes to improving mutual understanding, joint efforts, and the achievement of shared objectives, which include security, humanitarian assistance, human rights protection, infrastructure development, and much more.</p>
           <a href="/">
             <div class="button button-bold disable learn-button"><b>Learn more</b></div>
@@ -145,12 +145,27 @@
       </div>
 
       <div class="text-container">
-        <p class="description"> Cooperation between civil society organizations (CSOs) and local self-government bodies (LSGBs) is an important factor for the development and improvement of society at the local level. It promotes the strengthening of democracy, the involvement of the public in the decision-making process, the enhancement of service quality, and the overall development of the region.</p>
+        <p class="description">Cooperation between civil society organizations (CSOs) and local self-government bodies (LSGBs) is an important factor for the development and improvement of society at the local level. It promotes the strengthening of democracy, the involvement of the public in the decision-making process, the enhancement of service quality, and the overall development of the region.</p>
       </div>
 
       <a href="/">
         <div class="button button-bold disable learn-button"><b>Learn more</b></div>
       </a>
+    </div>
+  </section>
+
+  <section class="mission">
+    <div class="mission-content coorp content">
+      <div class="text-section section">
+        <p class="title">Baking bread in the<br>occupied territory of<br>Kherson region</p>
+        <p class="description">Together with representatives of the Orthodox Church of Ukraine (OCU), our organization established bread production in the occupied part of Kherson region. For this, we were awarded a distinction by the head of the OCU, Epiphanius. We take pride in this project.</p>
+        <a href="/">
+          <div class="button button-bold disable learn-button"><b>Learn more</b></div>
+        </a>
+      </div>
+      <div class="image-section hand-section section">
+        <img class="coorp-img" src="/images/bread.jpg" alt="">
+      </div>
     </div>
   </section>
 
