--- a/index.html
+++ b/index.html
@@ -169,6 +169,21 @@
     </div>
   </section>
 
+  <section class="mission">
+    <div class="mission-content coorp content">
+      <div class="text-section section">
+        <p class="title"> Support for children<br>from the children's<br>home</p>
+        <p class="description"> Our organization actively assists children who have lost their parents. Helping children is important and necessary to ensure their well-being, development, and integration into society. In addition to material support, emotional support is also crucial. Children from orphanages may require additional attention, love, and care, which we strive to provide them during these challenging times.</p>
+        <a href="/">
+          <div class="button button-bold disable learn-button"><b>Learn more</b></div>
+        </a>
+      </div>
+      <div class="image-section hand-section section">
+        <img src="/images/support.png" alt="">
+      </div>
+    </div>
+  </section>
+
   </main>
   <script src="index.js"></script>
 </body>
