--- a/index.html
+++ b/index.html
@@ -117,7 +117,12 @@
       <div class="mission-content coorp content">
         <div class="text-section section">
           <p class="title">Cooperation with<br>military administrations</p>
-          <p class="description">Cooperation between civil society organizations and military administrations is an important aspect of societal development and ensuring the security and well-being of the population. It is based on interaction and partnership between these two sectors, aimed at achieving common goals. Collaboration contributes to improving mutual understanding, joint efforts, and the achievement of shared objectives, which include security, humanitarian assistance, human rights protection, infrastructure development, and much more.</p>
+          <p class="description">Cooperation between civil society organizations and military administrations is an
+            important aspect of societal development and ensuring the security and well-being of the population. It is
+            based on interaction and partnership between these two sectors, aimed at achieving common goals.
+            Collaboration contributes to improving mutual understanding, joint efforts, and the achievement of shared
+            objectives, which include security, humanitarian assistance, human rights protection, infrastructure
+            development, and much more.</p>
           <a href="/">
             <div class="button button-bold disable learn-button"><b>Learn more</b></div>
           </a>
@@ -130,59 +135,125 @@
 
 
     <section class="coorperation">
-    <div class="coorperation-content content">
-      <p class="title">Cooperation with local<br>self-government bodies</p>
-      <div class="blocks-section">
-        <div class="block">
-          <img src="/images/coorpepation-1.jpg" alt="">
+      <div class="coorperation-content content">
+        <p class="title">Cooperation with local<br>self-government bodies</p>
+        <div class="blocks-section">
+          <div class="block">
+            <img src="/images/coorpepation-1.jpg" alt="">
+          </div>
+          <div class="block">
+            <img src="/images/coorperation-2.jpg" alt="">
+          </div>
+          <div class="block">
+            <img src="/images/coorperation-2.jpg" alt="">
+          </div>
         </div>
-        <div class="block">
-          <img src="/images/coorperation-2.jpg" alt="">
+
+        <div class="text-container">
+          <p class="description">Cooperation between civil society organizations (CSOs) and local self-government bodies
+            (LSGBs) is an important factor for the development and improvement of society at the local level. It
+            promotes the strengthening of democracy, the involvement of the public in the decision-making process, the
+            enhancement of service quality, and the overall development of the region.</p>
         </div>
-        <div class="block">
-          <img src="/images/coorperation-2.jpg" alt="">
-        </div>
-      </div>
 
-      <div class="text-container">
-        <p class="description">Cooperation between civil society organizations (CSOs) and local self-government bodies (LSGBs) is an important factor for the development and improvement of society at the local level. It promotes the strengthening of democracy, the involvement of the public in the decision-making process, the enhancement of service quality, and the overall development of the region.</p>
-      </div>
-
-      <a href="/">
-        <div class="button button-bold disable learn-button"><b>Learn more</b></div>
-      </a>
-    </div>
-  </section>
-
-  <section class="mission">
-    <div class="mission-content coorp content">
-      <div class="text-section section">
-        <p class="title">Baking bread in the<br>occupied territory of<br>Kherson region</p>
-        <p class="description">Together with representatives of the Orthodox Church of Ukraine (OCU), our organization established bread production in the occupied part of Kherson region. For this, we were awarded a distinction by the head of the OCU, Epiphanius. We take pride in this project.</p>
         <a href="/">
           <div class="button button-bold disable learn-button"><b>Learn more</b></div>
         </a>
       </div>
-      <div class="image-section hand-section section">
-        <img class="coorp-img" src="/images/bread.jpg" alt="">
-      </div>
-    </div>
-  </section>
+    </section>
 
-  <section class="mission">
-    <div class="mission-content coorp content">
-      <div class="text-section section">
-        <p class="title"> Support for children<br>from the children's<br>home</p>
-        <p class="description"> Our organization actively assists children who have lost their parents. Helping children is important and necessary to ensure their well-being, development, and integration into society. In addition to material support, emotional support is also crucial. Children from orphanages may require additional attention, love, and care, which we strive to provide them during these challenging times.</p>
-        <a href="/">
-          <div class="button button-bold disable learn-button"><b>Learn more</b></div>
-        </a>
+    <section class="mission">
+      <div class="mission-content coorp content">
+        <div class="text-section section">
+          <p class="title">Baking bread in the<br>occupied territory of<br>Kherson region</p>
+          <p class="description">Together with representatives of the Orthodox Church of Ukraine (OCU), our organization
+            established bread production in the occupied part of Kherson region. For this, we were awarded a distinction
+            by the head of the OCU, Epiphanius. We take pride in this project.</p>
+          <a href="/">
+            <div class="button button-bold disable learn-button"><b>Learn more</b></div>
+          </a>
+        </div>
+        <div class="image-section hand-section section">
+          <img class="coorp-img" src="/images/bread.jpg" alt="">
+        </div>
       </div>
-      <div class="image-section hand-section section">
-        <img src="/images/support.png" alt="">
+    </section>
+
+    <section class="mission">
+      <div class="mission-content coorp content">
+        <div class="text-section section">
+          <p class="title">Support for children<br>from the children's<br>home</p>
+          <p class="description"> Our organization actively assists children who have lost their parents. Helping
+            children is important and necessary to ensure their well-being, development, and integration into society.
+            In addition to material support, emotional support is also crucial. Children from orphanages may require
+            additional attention, love, and care, which we strive to provide them during these challenging times.</p>
+          <a href="/">
+            <div class="button button-bold disable learn-button"><b>Learn more</b></div>
+          </a>
+        </div>
+        <div class="image-section hand-section section">
+          <img src="/images/support.png" alt="">
+        </div>
       </div>
-    </div>
-  </section>
+    </section>
+
+    <section class="mission">
+      <div class="mission-content coorp content">
+        <div class="text-section section">
+          <p class="title">Housing Reconstruction<br>Project for Ukrainians</p>
+          <p class="description">Together with our team, we are launching a new charitable program for Ukrainians who
+            have lost their homes during the war. The war has displaced 13 million Ukrainians, and many of them have
+            nowhere to return to as their homes have been turned into ruins by the Russian army. Rebuilding their homes
+            is impossible. The government has been collecting information about the destroyed housing for a year through
+            the mobile application "Diya." Ukrainians have submitted 350,000 applications. Today, we want to support not
+            only our defenders but also provide assistance to our civilian population.</p>
+          <a href="/">
+            <div class="button button-bold disable learn-button"><b>Learn more</b></div>
+          </a>
+        </div>
+        <div class="image-section hand-section section">
+          <img class="houses" src="/images/houses.png" alt="">
+        </div>
+      </div>
+    </section>
+
+    <section class="mission">
+      <div class="mission-content coorp content">
+        <div class="text-section section">
+          <p class="title">Military Rehabilitation<br>Project</p>
+          <p class="description">The project of our organization on the rehabilitation of veterans is an important
+            initiative aimed at supporting and integrating veterans and military personnel who have returned from combat
+            or have post-traumatic stress disorder (PTSD) and other service-related issues.<br>The main goal of the
+            project is to provide comprehensive support and rehabilitation services to the military, helping them
+            restore physical, psychological, and social well-being.</p>
+          <a href="/">
+            <div class="button button-bold disable learn-button"><b>Learn more</b></div>
+          </a>
+        </div>
+        <div class="image-section hand-section section">
+          <img src="/images/doctor.png" alt="">
+        </div>
+      </div>
+    </section>
+
+    <section class="mission">
+      <div class="mission-content coorp content">
+        <div class="text-section section">
+          <p class="title">Cooperation with<br>international partners</p>
+          <p class="description">Cooperation with international partners to support Ukrainian military is an important
+            aspect of our organization's activities. We collaborate with various countries and international
+            organizations to enhance the defense capabilities of our armed forces and obtain necessary military
+            equipment. Cooperation with international partners helps Ukrainian military gain access to the assistance
+            that is crucial for victory.</p>
+          <a href="/">
+            <div class="button button-bold disable learn-button"><b>Learn more</b></div>
+          </a>
+        </div>
+        <div class="image-section hand-section section">
+          <img class="houses" src="/images/hangs.png" alt="">
+        </div>
+      </div>
+    </section>
 
   </main>
   <script src="index.js"></script>
