--- a/index.html
+++ b/index.html
@@ -255,6 +255,17 @@
       </div>
     </section>
 
+    <section class="mission">
+      <div class="mission-content coorp content">
+        <div class="image-section hand-section section">
+          <img class="coorp-img" src="/images/ambassador.jpg" alt="">
+        </div>
+        <div class="text-section section">
+          <p class="title">Ambassador of our organization</p>
+          <p class="description">The Ambassador of our organization is John Sweany. His appointment in this role recognizes his significant contribution and dedication to the organization's cause. John Sweany is an outstanding individual known for his active stance and concern for the well-being of Ukraine. He is a prominent activist, leader of civic movements, and philanthropist. He brings attention to important issues regarding Ukraine's national security and support for the military. As an Ambassador of "Defense of Society of Ukraine," John Sweany utilizes his position and influence to raise awareness about the needs of the military and mobilize resources for their support. He actively collaborates with the goal of providing necessary assistance and resources to support the military and strengthen Ukraine's security.</p>
+        </div>
+      </div>
+    </section>
   </main>
   <script src="index.js"></script>
 </body>
