--- a/index.html
+++ b/index.html
@@ -231,7 +231,7 @@
           </a>
         </div>
         <div class="image-section hand-section section">
-          <img src="/images/doctor.png" alt="">
+          <img class="houses" src="/images/doctor.png" alt="">
         </div>
       </div>
     </section>
