--- a/index.html
+++ b/index.html
@@ -266,6 +266,10 @@
         </div>
       </div>
     </section>
+
+    <footer>
+      
+    </footer>
   </main>
   <script src="index.js"></script>
 </body>
