--- a/index.html
+++ b/index.html
@@ -22,6 +22,8 @@
       </div>
     </header>
 
+    <hr class="divider">
+
     <section class="banner">
       <div class="banner-content content">
         <div class="button-section section">
@@ -267,8 +269,37 @@
       </div>
     </section>
 
+    <hr class="divider footer-divider">
     <footer>
-      
+      <div class="column">
+        <p class="title">Our contacts:</p>
+        <div class="line">
+          <img src="/images/call.png"class="icon">
+          <div class="numbers">
+            <p>+38 068 35 05 823</p>
+            <p>+44 771 95 85 335</p>
+          </div>
+        </div>
+        <div class="line">
+          <img src="/images/email.png"class="icon">
+          <p>defense@ua.com</p>
+        </div>
+      </div>
+      <div class="column">
+        <p class="title">Social networks:</p>
+        <div class="line">
+          <img src="/images/facebook.png"class="icon">
+          <p class="link">Facebook</p>
+        </div>
+        <div class="line">
+          <img src="/images/instagram.png"class="icon">
+          <p>Instagram</p>
+        </div>
+        <div class="line">
+          <img src="/images/twitter.png"class="icon">
+          <p>Twitter</p>
+        </div>
+      </div>
     </footer>
   </main>
   <script src="index.js"></script>
