--- a/index.html
+++ b/index.html
@@ -264,40 +264,49 @@
         </div>
         <div class="text-section section">
           <p class="title">Ambassador of our organization</p>
-          <p class="description">The Ambassador of our organization is John Sweany. His appointment in this role recognizes his significant contribution and dedication to the organization's cause. John Sweany is an outstanding individual known for his active stance and concern for the well-being of Ukraine. He is a prominent activist, leader of civic movements, and philanthropist. He brings attention to important issues regarding Ukraine's national security and support for the military. As an Ambassador of "Defense of Society of Ukraine," John Sweany utilizes his position and influence to raise awareness about the needs of the military and mobilize resources for their support. He actively collaborates with the goal of providing necessary assistance and resources to support the military and strengthen Ukraine's security.</p>
+          <p class="description">The Ambassador of our organization is John Sweany. His appointment in this role
+            recognizes his significant contribution and dedication to the organization's cause. John Sweany is an
+            outstanding individual known for his active stance and concern for the well-being of Ukraine. He is a
+            prominent activist, leader of civic movements, and philanthropist. He brings attention to important issues
+            regarding Ukraine's national security and support for the military. As an Ambassador of "Defense of Society
+            of Ukraine," John Sweany utilizes his position and influence to raise awareness about the needs of the
+            military and mobilize resources for their support. He actively collaborates with the goal of providing
+            necessary assistance and resources to support the military and strengthen Ukraine's security.</p>
         </div>
       </div>
     </section>
 
     <hr class="divider footer-divider">
     <footer>
-      <div class="column">
-        <p class="title">Our contacts:</p>
-        <div class="line">
-          <img src="/images/call.png"class="icon">
-          <div class="numbers">
-            <p>+38 068 35 05 823</p>
-            <p>+44 771 95 85 335</p>
+      <div class="footer-content content">
+        <div class="column">
+          <p class="title">Our contacts:</p>
+          <div class="line">
+            <img src="/images/call.png" class="icon">
+            <div class="numbers">
+              <p>+38 068 35 05 823</p>
+              <p>+44 771 95 85 335</p>
+            </div>
+          </div>
+          <div class="line">
+            <img src="/images/email.png" class="icon">
+            <p>defense@ua.com</p>
           </div>
         </div>
-        <div class="line">
-          <img src="/images/email.png"class="icon">
-          <p>defense@ua.com</p>
-        </div>
-      </div>
-      <div class="column">
-        <p class="title">Social networks:</p>
-        <div class="line">
-          <img src="/images/facebook.png"class="icon">
-          <p class="link">Facebook</p>
-        </div>
-        <div class="line">
-          <img src="/images/instagram.png"class="icon">
-          <p>Instagram</p>
-        </div>
-        <div class="line">
-          <img src="/images/twitter.png"class="icon">
-          <p>Twitter</p>
+        <div class="column">
+          <p class="title">Social networks:</p>
+          <div class="line">
+            <img src="/images/facebook.png" class="icon">
+            <p class="link">Facebook</p>
+          </div>
+          <div class="line">
+            <img src="/images/instagram.png" class="icon">
+            <p>Instagram</p>
+          </div>
+          <div class="line">
+            <img src="/images/twitter.png" class="icon">
+            <p>Twitter</p>
+          </div>
         </div>
       </div>
     </footer>
