ready adaptive for 3 sections

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
 
     <header>
       <div class="header-content content">
+        <a href="" class="phantom">ㅤ</a>
         <a href="/"><img class="logo" src="/images/logo.png" alt=""></a>
         <a href="/">
           <div class="lang-button">UA</div>
@@ -26,7 +27,7 @@
 
     <section class="banner">
       <div class="banner-content content">
-        <div class="button-section section">
+        <div class="button-section">
           <a href="/">
             <div class="button button-bold"><b>Become a<br>volunteer</b></div>
           </a>
@@ -34,7 +35,7 @@
             <div class="button disable">Learn more</div>
           </a>
         </div>
-        <div class="label-section section">
+        <div class="label-section">
           <img class="blue-ellipse" src="/images/ellipse-1.png" alt="">
           <h1 class="h1">Defense of<br>Ukrainian<br>Society</h1>
           <img class="yellow-ellipse" src="/images/ellipse-2.png" alt="">
@@ -62,7 +63,7 @@
           <img src="/images/goals.png" alt="">
         </div>
         <div class="text-section section">
-          <p class="title"> Goals and areas of the Civil<br>Society Organization</p>
+          <p class="title"> Goals and areas of the Civil Society Organization</p>
           <p class="description">The main goal of the Foundation's activities is to carry out charitable activities for
             the benefit of society by uniting the efforts of the public aimed at facilitating the practical
             implementation of national, regional, local, and international programs aimed at improving the
@@ -71,6 +72,8 @@
         </div>
       </div>
     </section>
+
+    <!-- 
 
     <section class="president">
       <div class="president-header content">
@@ -309,7 +312,8 @@
           </div>
         </div>
       </div>
-    </footer>
+    </footer> -->
+
   </main>
   <script src="index.js"></script>
 </body>
