--- a/index.html
+++ b/index.html
@@ -116,8 +116,6 @@
       </div>
     </section>
 
-    <!-- 
-
     <section class="mission">
       <div class="mission-content coorp content">
         <div class="text-section section">
@@ -132,13 +130,13 @@
             <div class="button button-bold disable learn-button"><b>Learn more</b></div>
           </a>
         </div>
-        <div class="image-section hand-section section">
+        <div class="image-section coorperation-section hand-section section">
           <img class="coorp-img" src="/images/coorperation-2.jpg" alt="">
         </div>
       </div>
     </section>
 
-
+<!-- 
     <section class="coorperation">
       <div class="coorperation-content content">
         <p class="title">Cooperation with local<br>self-government bodies</p>
