--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
     </section>
 
     <section class="mission">
-      <div class="mission-content coorp content">
+      <div class="mission-content coorp coorp-gap content">
         <div class="text-section section">
           <p class="title">Cooperation with<br>military administrations</p>
           <p class="description">Cooperation between civil society organizations and military administrations is an
@@ -164,8 +164,6 @@
       </div>
     </section>
 
-    <!-- 
-      
     <section class="mission">
       <div class="mission-content coorp content">
         <div class="text-section section">
@@ -260,9 +258,9 @@
     </section>
 
     <section class="mission">
-      <div class="mission-content coorp content">
+      <div class="mission-content revert coorp content">
         <div class="image-section hand-section section">
-          <img class="coorp-img" src="/images/ambassador.jpg" alt="">
+          <img class="coorp-img ambassador-image" src="/images/ambassador.jpg" alt="">
         </div>
         <div class="text-section section">
           <p class="title">Ambassador of our organization</p>
@@ -277,6 +275,8 @@
         </div>
       </div>
     </section>
+
+        <!-- 
 
     <hr class="divider footer-divider">
     <footer>
