--- a/index.html
+++ b/index.html
@@ -276,8 +276,6 @@
       </div>
     </section>
 
-        <!-- 
-
     <hr class="divider footer-divider">
     <footer>
       <div class="footer-content content">
@@ -311,7 +309,7 @@
           </div>
         </div>
       </div>
-    </footer> -->
+    </footer>
 
   </main>
   <script src="index.js"></script>
