--- a/index.html
+++ b/index.html
@@ -28,11 +28,11 @@
     <section class="banner">
       <div class="banner-content content">
         <div class="button-section">
-          <a href="/">
-            <div class="button button-bold"><b>Become a<br>volunteer</b></div>
+          <a href="https://forms.gle/Cm8Pfvx79wjMme6f8">
+            <div class="button banner-button button-bold"><b>Become a<br>volunteer</b></div>
           </a>
-          <a href="/">
-            <div class="button disable">Learn more</div>
+          <a href="#footer">
+            <div class="button banner-button disable">Learn more</div>
           </a>
         </div>
         <div class="label-section">
@@ -110,7 +110,7 @@
           </div>
         </div>
 
-        <a href="/">
+        <a href="#footer">
           <div class="button button-bold disable learn-button"><b>Learn more</b></div>
         </a>
       </div>
@@ -126,7 +126,7 @@
             Collaboration contributes to improving mutual understanding, joint efforts, and the achievement of shared
             objectives, which include security, humanitarian assistance, human rights protection, infrastructure
             development, and much more.</p>
-          <a href="/">
+          <a href="#footer">
             <div class="button button-bold disable learn-button"><b>Learn more</b></div>
           </a>
         </div>
@@ -158,7 +158,7 @@
             enhancement of service quality, and the overall development of the region.</p>
         </div>
 
-        <a href="/">
+        <a href="#footer">
           <div class="button button-bold disable learn-button"><b>Learn more</b></div>
         </a>
       </div>
@@ -171,7 +171,7 @@
           <p class="description">Together with representatives of the Orthodox Church of Ukraine (OCU), our organization
             established bread production in the occupied part of Kherson region. For this, we were awarded a distinction
             by the head of the OCU, Epiphanius. We take pride in this project.</p>
-          <a href="/">
+          <a href="#footer">
             <div class="button button-bold disable learn-button"><b>Learn more</b></div>
           </a>
         </div>
@@ -189,12 +189,12 @@
             children is important and necessary to ensure their well-being, development, and integration into society.
             In addition to material support, emotional support is also crucial. Children from orphanages may require
             additional attention, love, and care, which we strive to provide them during these challenging times.</p>
-          <a href="/">
+          <a href="#footer">
             <div class="button button-bold disable learn-button"><b>Learn more</b></div>
           </a>
         </div>
         <div class="image-section hand-section section">
-          <img src="/images/support.png" alt="">
+          <img class="support" src="/images/support.png" alt="">
         </div>
       </div>
     </section>
@@ -209,7 +209,7 @@
             is impossible. The government has been collecting information about the destroyed housing for a year through
             the mobile application "Diya." Ukrainians have submitted 350,000 applications. Today, we want to support not
             only our defenders but also provide assistance to our civilian population.</p>
-          <a href="/">
+          <a href="#footer">
             <div class="button button-bold disable learn-button"><b>Learn more</b></div>
           </a>
         </div>
@@ -228,7 +228,7 @@
             or have post-traumatic stress disorder (PTSD) and other service-related issues.<br>The main goal of the
             project is to provide comprehensive support and rehabilitation services to the military, helping them
             restore physical, psychological, and social well-being.</p>
-          <a href="/">
+          <a href="#footer">
             <div class="button button-bold disable learn-button"><b>Learn more</b></div>
           </a>
         </div>
@@ -247,7 +247,7 @@
             organizations to enhance the defense capabilities of our armed forces and obtain necessary military
             equipment. Cooperation with international partners helps Ukrainian military gain access to the assistance
             that is crucial for victory.</p>
-          <a href="/">
+          <a href="#footer">
             <div class="button button-bold disable learn-button"><b>Learn more</b></div>
           </a>
         </div>
@@ -277,7 +277,7 @@
     </section>
 
     <hr class="divider footer-divider">
-    <footer>
+    <footer id="footer">
       <div class="footer-content content">
         <div class="column">
           <p class="title">Our contacts:</p>
