--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
             <p>COLLABORATION WITH THE GOVERNMENT</p>
           </div>
           <div class="block work-block">
-            <img src="/images/our-work-1.jpg" alt="">
+            <img src="/images/our-work-3.jpg" alt="">
             <p>CHARITY AUCTION</p>
           </div>
         </div>
@@ -141,13 +141,13 @@
         <p class="title">Cooperation with local<br>self-government bodies</p>
         <div class="blocks-section">
           <div class="block">
-            <img src="/images/coorpepation-1.jpg" alt="">
+            <img src="/images/coorperation-1.jpg" alt="">
           </div>
           <div class="block">
             <img src="/images/coorperation-2.jpg" alt="">
           </div>
           <div class="block">
-            <img src="/images/coorperation-2.jpg" alt="">
+            <img src="/images/coorperation-3.jpg" alt="">
           </div>
         </div>
 
@@ -290,7 +290,7 @@
           </div>
           <div class="line">
             <img src="/images/email.png" class="icon">
-            <p>defense@ua.com</p>
+            <p>defense@gmail.com</p>
           </div>
         </div>
         <div class="column">
