--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <header>
       <div class="header-content content">
         <a href="" class="phantom">ㅤ</a>
-        <a href="/"><img class="logo" src="/images/logo.png" alt=""></a>
+        <a href="/"><img class="logo" src="/images/logo-eng.png" alt=""></a>
         <a href="/">
           <div class="lang-button">UA</div>
         </a>
