--- a/eng.html
+++ b/eng.html
@@ -16,8 +16,8 @@
     <header>
       <div class="header-content content">
         <a href="" class="phantom">ㅤ</a>
-        <a href="/"><img class="logo" src="/images/logo-eng.png" alt=""></a>
-        <a href="/">
+        <a href="/"><img class="logo" src="/images/logo.png" alt=""></a>
+        <a href="/ua.html">
           <div class="lang-button">UA</div>
         </a>
       </div>
