--- a/ua.html
+++ b/ua.html
@@ -36,9 +36,9 @@
           </a>
         </div>
         <div class="label-section">
-          <img class="blue-ellipse" src="/images/ellipse-1.png" alt="">
+          <img class="blue-ellipse-ua" src="/images/ellipse-1.png" alt="">
           <h1 class="h1">Захист<br>Українського<br>Суспільства</h1>
-          <img class="yellow-ellipse" src="/images/ellipse-2.png" alt="">
+          <img class="yellow-ellipse-ua" src="/images/ellipse-2.png" alt="">
         </div>
       </div>
     </section>
