added section with obl

--- a/ua.html
+++ b/ua.html
@@ -93,7 +93,7 @@
 
     <section class="our-work">
       <div class="our-work-content content">
-        <p class="title">Наша діяльность</p>
+        <p class="title">Наша діяльність</p>
         <div class="blocks-section">
           <div class="block work-block">
             <img src="/images/our-work-1.jpg" alt="">
@@ -176,6 +176,21 @@
         </div>
         <div class="image-section hand-section section">
           <img class="coorp-img" src="/images/bread.jpg" alt="">
+        </div>
+      </div>
+    </section>
+
+    <section class="mission">
+      <div class="mission-content coorp content">
+        <div class="text-section section">
+          <p class="title">Співпраця з Закарпатською облрадою</p>
+          <p class="description">Відповідний меморандум про співпрацю щойно підписали голова облради Володимир Чубірко та президент організації Богдан Забредовський. Сторони скомунікував депутат обласної ради Петро Станко. У документі йдеться про співпрацю у гуманітарній галузі, проведення спільних заходів, тренінгів та навчань, форумів, тощо...</p>
+          <a href="https://zakarpat-rada.gov.ua/zakarpatska-oblrada-spivpratsiuvatyme-z-ho-zakhyst-suspilstva-ukrainy">
+            <div class="button button-bold disable learn-button"><b>Дізнатись більше</b></div>
+          </a>
+        </div>
+        <div class="image-section hand-section section">
+          <img class="houses" src="/images/doctor.png" alt="">
         </div>
       </div>
     </section>
